fix blockquote display on mobile

--- a/_sass/1_core/typography.scss
+++ b/_sass/1_core/typography.scss
@@ -81,21 +81,29 @@ em {
 }
 
 blockquote {
-	margin: $spacing-lg auto 0;
+	margin: $spacing-md #{-$spacing-sm} 0;
 	color: $background;
 	background: $text-dark;
 	max-width: $container-sm;
-	padding: $spacing-lg;
-	font-size: 1.25rem;
+	padding: $spacing-sm;
+	font-family: $font-serif;
 	font-style: italic;
 	strong {
 		display: block;
+		font-family: $font-sans;
 		font-style: normal;
 		text-align: right;
 	}
 	a {
 		color: inherit;
 		text-decoration: underline;
+	}
+}
+
+@media (min-width: $media-md) {
+	blockquote {
+		margin-left: auto;
+		margin-right: auto;
 	}
 }
 
